--- a/SimpleWeather/Base.lproj/Main.storyboard
+++ b/SimpleWeather/Base.lproj/Main.storyboard
@@ -189,6 +189,9 @@
                                                     <color key="baseForegroundColor" systemColor="systemTealColor"/>
                                                     <color key="baseBackgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </buttonConfiguration>
+                                                <connections>
+                                                    <action selector="changeButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="TT2-w8-q8C"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -211,6 +214,11 @@
                             <constraint firstItem="rmD-aq-ZAj" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="anD-Qi-veg"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="cityLabel" destination="5m3-8U-fHJ" id="aJz-0o-GI0"/>
+                        <outlet property="temperatureLabel" destination="Aaq-oS-Fo4" id="IUe-Wr-XRj"/>
+                        <outlet property="weatherImageView" destination="ECM-o8-TzJ" id="7Qy-xF-djG"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -224,7 +232,7 @@
         <image name="sun.max.fill" catalog="system" width="128" height="125"/>
         <image name="wind" catalog="system" width="128" height="103"/>
         <systemColor name="systemTealColor">
-            <color red="0.18823529411764706" green="0.69019607843137254" blue="0.7803921568627451" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.18823529410000001" green="0.69019607839999997" blue="0.78039215689999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
